<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white_12sp">

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/info_widget_guide"
            android:textColor="@color/black_1"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStepOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/step_one_widget_guide"
            android:textColor="@color/black_1"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvInfo" />

        <TextView
            android:id="@+id/tvStepTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/step_two_widget_guide"
            android:textColor="@color/black_1"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvStepOne" />

        <TextView
            android:id="@+id/tvStepThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/step_three_widget_guide"
            android:textColor="@color/black_1"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvStepTwo" />

        <TextView
            android:id="@+id/tvGotIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/got_it"
            android:textAllCaps="true"
            android:textColor="@color/primary_purpul"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStepThree" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
