<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_more"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/manage_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="@dimen/_10sdp"
        android:text="@string/manage_categories"
        android:textColor="@color/grey_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/search"
        android:textColor="@color/grey_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_categories" />

    <TextView
        android:id="@+id/arrage_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/arrage_task"
        android:textColor="@color/grey_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

</androidx.constraintlayout.widget.ConstraintLayout>