<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/round_white_12sp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_format"
                android:textColor="@color/black_1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <RadioGroup
                android:id="@+id/groupRdTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle">
                <RadioButton
                    android:id="@+id/rb_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default"
                    android:textColor="@color/black_2"
                    android:textSize="18sp"
                    android:paddingHorizontal="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <RadioButton
                    android:id="@+id/rb_24h"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_24h"
                    android:textColor="@color/black_2"
                    android:textSize="18sp"
                    android:paddingHorizontal="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@id/rb_default"
                    app:layout_constraintTop_toBottomOf="@+id/rb_default" />

                <RadioButton
                    android:id="@+id/rb_12h"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_12h"
                    android:textColor="@color/black_2"
                    android:textSize="18sp"
                    android:paddingHorizontal="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@id/rb_dmy"
                    app:layout_constraintTop_toBottomOf="@+id/rb_dmy" />
            </RadioGroup>



            <TextView
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@android:color/transparent"
                android:text="@string/save"
                android:padding="@dimen/_6sdp"
                android:textAllCaps="true"
                android:textColor="@color/primary_purpul"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/groupRdTime" />
            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:padding="@dimen/_6sdp"
                android:textAllCaps="true"
                android:textColor="@color/primary_purpul_50"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/btnDone"
                app:layout_constraintTop_toTopOf="@+id/btnDone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>